syntax = "proto3";
package books;

import "test_grpc/third_party/api/annotations.proto";

// The library service definition.
service Library {
    rpc GetBooks(GetBooksRequest) returns (Books) {
        option (google.api.http) = {
          get: "/books"
        };
    }

    rpc GetBook(GetBookRequest) returns (OneBook) {
        option (google.api.http) = {
          get: "/books/{book_id}"
        };
    }

    rpc UpdateBook(UpdateBookRequest) returns (OneBook) {
        option (google.api.http) = {
          put: "/books/{book_id}"
          body: "msg"
        };
    }

    rpc PatchBook(UpdateBookRequest) returns (OneBook) {
        option (google.api.http) = {
          patch: "/books/{book_id}"
          body: "msg"
        };
    }

    rpc DeleteBook(DeleteBookRequest) returns (Result) {
        option (google.api.http) = {
          delete: "/books/{book_id}"
        };
    }

    rpc PostBook(PostBookRequest) returns (OneBook) {
        option (google.api.http) = {
          post: "/books"
          body: "msg"
        };
    }
}
  

message Result {
	string rez = 1;  
}

message OneBook {
	int64 id = 1;    
	string author = 2; 
	string title = 3;  
}

message Books {
    repeated OneBook books = 1;
}

message BookData {
	string author = 1; 
	string title = 2;  
}

message UpdateBookRequest {
    string book_id = 1; 
    BookData msg = 2;   
}

message DeleteBookRequest {
    string book_id = 1; 
}

message PostBookRequest {
    BookData msg = 1;   
}

message GetBookRequest {
    string book_id = 1; 
}

message GetBooksRequest {
    string buff = 1;   
}
